fix: corrige z-index do modal sweetalert para sobrepor tela de login que tinha 7 noves

--- a/frontend/cozinha/style.css
+++ b/frontend/cozinha/style.css
@@ -674,5 +674,5 @@ input:checked + .slider:before {
 
 
 /* Fix Modal Swal2 Z-Index */
-.swal2-container { z-index: 999999 !important; }
+.swal2-container { z-index: 99999999 !important; }
 
